--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.3.3",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.1",
     "bcryptjs": "^2.4.3",
