--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/prisma-adapter": "^1.3.3",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.1",
+    "@react-stately/data": "^3.11.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
